(add items to menus and fix z-index)

--- a/src/app/features/equipment/components/item-browser/item-browser.component.scss
+++ b/src/app/features/equipment/components/item-browser/item-browser.component.scss
@@ -1,5 +1,5 @@
 :host {
   position: relative;
   display: block;
-  z-index: 1001;
+  z-index: 999;
 }
